erDiagram
    users ||--o| supervisors : "has profile"
    users ||--o{ projects : "owns"
    users ||--o{ submissions : "submits"
    users ||--o{ notifications : "receives"
    users ||--o{ audit_logs : "triggers"

    supervisors ||--o{ projects : "supervises"
    supervisors ||--o{ feedback : "provides"

    projects ||--o{ submissions : "contains"
    projects ||--o{ feedback : "receives"

    submissions ||--o| plagiarism_reports : "generates"
    submissions ||--o{ similarity_matches : "matched_in"

    plagiarism_reports ||--o{ similarity_matches : "contains"

    users {
        int id PK
        string full_name
        string email UK
        string password_hash
        string role
        string department
        string matric_number UK
        boolean is_active
    }

    supervisors {
        int id PK
        int user_id FK
        string staff_id UK
        string department
        string specialization
        int max_students
    }

    projects {
        int id PK
        string title
        string category
        string department
        string academic_session
        int student_id FK
        int supervisor_id FK
        string status
    }

    submissions {
        int id PK
        int project_id FK
        int version
        string original_filename
        string file_path
        string file_type
        bigint file_size
        text extracted_text
        int submitted_by FK
        string submission_status
    }

    plagiarism_reports {
        int id PK
        int submission_id FK
        float similarity_score
        string result
        int matched_documents_count
        float processing_time
        int total_words
        string review_status
    }

    similarity_matches {
        int id PK
        int report_id FK
        int matched_submission_id FK
        float similarity_score
        text matched_text
    }

    feedback {
        int id PK
        int project_id FK
        int supervisor_id FK
        text comments
        string status_assigned
    }

    audit_logs {
        int id PK
        int user_id FK
        string action
        text description
        string ip_address
    }

    settings {
        int id PK
        string key UK
        text value
        text description
    }
